--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-streamlit_option_menu==0.3.2
-
-streamlit == 0.87.0
-pandas == 1.3.2
+streamlit>=1.30,<1.36
+protobuf==3.20.3
+streamlit-option-menu
